--- a/application/index/view/Student/edit.html
+++ b/application/index/view/Student/edit.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="zh-hans">
+<html lang="zh-cn">
 
 <head>
     <meta charset="UTF-8">
-    <title>编辑数据</title>
+    <title>编辑</title>
 </head>
 
 <body class="contanier">
@@ -11,14 +11,21 @@
         <div class="col-md-12">
             <form action="{:url('update')}" method="post">
                 <label>姓名:</label>
-                <input type="hidden" name="id" value="{$Klass->getData('id')}" />
-                <input type="text" name="name" value="{$Klass->getData('name')}" />
-                <label>辅导员:</label>
-                <select name="teacher_id" id="teacher">
-            {volist name="teachers" id="_Teacher"}
-            <option value="{$_Teacher->getData('id')}" {eq name="$_Teacher->getData('id')" value="$Klass->getData('teacher_id')"} selected="selected"{/eq}>{$_Teacher->getData('name')}</option>
-            {/volist}
-        </select>
+                <input type="hidden" name="id" value="{$Student->getData('id')}" />
+                <input type="text" name="name" value="{$Student->getData('name')}" />
+                <label>学号:</label>
+                <input type="text" name="num" value="{$Student->getData('num')}" />
+                <label>性别:</label>
+                <input type="radio" name="sex" value="0" id="sex0" {eq name="Student->getData('sex')" value="0"}checked="checked"{/eq}/><label for="sex0">男</label>
+                <input type="radio" name="sex" value="1" id="sex1" {eq name="Student->getData('sex')" value="1"}checked="checked"{/eq}/><label for="sex1">女</label>
+                <label>班级</label>
+                <select name="klass_id">
+                {volist name="Student->klass->all()" id="klass"}
+                    <option value="{$klass->id}" {eq name="klass->id" value="$Student->klass_id"} selected="selected"{/eq}>{$klass->name}</option>
+                {/volist}
+                </select>
+                <label>邮箱:</label>
+                <input type="email" name="email" value="{$Student->getData('email')}" />
                 <button type="submit">保存</button>
             </form>
         </div>
